/master components/Form form validation, валидатор

--- a/client/styles/bootstrap/forms.pcss
+++ b/client/styles/bootstrap/forms.pcss
@@ -21,7 +21,7 @@
   font-size: 80%;
   color:#6c757d;
 }
-.form-control.is-hint ~ .hint-feedback,
-.form-control.is-hint ~ .hint-tooltip {
+.form-control.is-hint:focus ~ .hint-feedback,
+.form-control.is-hint:focus ~ .hint-tooltip {
   display: block;
 }
